<resources>
    <string name="app_name">MediSure</string>
    <string name="welcome_message">Caregiver Companion</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dashboard_title">My Dashboard</string>
</resources>
